@@ -1,6 +1,7 @@
 
 ####   Don't forget to change the version number in configure.ac!   ####
 
+26 Feb 2006 Implement LCSS feature - Jan Jaeger
 25 Feb 2006 cckd 0.3.1 - Greg Smith
 24 Feb 2006 Skeletal last floating point instructions - Bernard van der Helm
 21 Feb 2006 Fix string overrun when hitting tab at the wrong time - Bjoern
